allow tests to run correctly from command line