@@ -36,5 +36,10 @@ test {
 	useJUnitPlatform()
 }
 
+tasks.named('test') {
+	jvmArgs(['--enable-preview'])
+	useJUnitPlatform()
+}
+
 
 
